# biosieve

./: .gitignore  README.md  STATUS.md  TODO.md  prek.toml  pyproject.toml  ruff.toml  todo.md
.github/workflows/: examples.yml  prek.yml  publish-pypi.yml  tests.yml
biosieve/: __init__.py  __main__.py  types.py
biosieve/cli/: __init__.py  common.py  doctor.py  info.py  main.py  reduce.py  split.py  validate.py
biosieve/core/: __init__.py  common.py  factory.py  registry.py  runner.py  spec.py  split_runner.py  strategies.py
biosieve/io/: __init__.py  csv.py  params.py  validate.py
biosieve/reduction/: __init__.py  base.py  common.py  descriptor_euclidean.py  embedding_cosine.py  exact.py  identity_greedy.py  kmer_jaccard.py  minhash_jaccard.py  mmseqs2.py  structural_distance.py
biosieve/reduction/backends/: __init__.py  descriptor_backend.py  embedding_backend.py  kmer_backend.py  mmseqs2_backend.py  structure_backend.py
biosieve/reporting/: schemas.py
biosieve/splitting/: __init__.py  base.py  cluster.py  common.py  config.py  distance_aware.py  distance_aware_kfold.py  group.py  group_kfold.py  homology_aware.py  random.py  random_kfold.py  stratified.py  stratified_kfold.py  stratified_numeric.py  stratified_numeric_kfold.py  time_based.py
biosieve/utils/: __init__.py  logging.py
configs/: params_reducer.yaml  params_split_distance_aware.yaml  params_split_distance_aware_desc_kfold.yaml  params_split_random.yaml  params_split_stratified_num_kfold.yaml  params_split_stratified_numerical.yaml  params_split_time.yaml
examples/: README.md  gemerating_demo_distances_structures.ipynb  generate_demo_descriptors.py  generate_demo_distances_structures.py  generating_demo_descriptors.ipynb  generating_random_datasets.py  prepare_cluster_mapping.py  prepare_embedding_for_reductions.py  preparing_cluster_mapping.ipynb  run_ci_examples.sh  testing_reduce_with_yml.sh  testing_reducers.sh  testing_splitters.sh  using_sylphy_to_get_demo_embedding.sh
examples/configs/: params_reducer.yaml  params_reducer_minhash_jaccard.yaml  params_split_cluster_aware.yaml  params_split_cluster_aware_with_mapping.yaml  params_split_distance_aware_descriptors.yaml  params_split_distance_aware_embedding_kfold.yaml  params_split_group.yaml  params_split_group_kfold.yaml  params_split_homology_aware.yaml  params_split_homology_aware_precomputed.yaml  params_split_random_kfold.yaml  params_split_stratified.yaml  params_split_stratified_kfold.yaml  params_split_stratified_numerical.yaml
examples/raw_data_examples/: biosieve_example_dataset_1000.csv  demo_esm2_t6_8M_UR50D.csv
src/biosieve/: __init__.py  types.py
src/biosieve/cli/: info.py  main.py  reduce.py  split.py  validate.py
src/biosieve/core/: __init__.py  factory.py  registry.py  runner.py  spec.py  split_runner.py  strategies.py
src/biosieve/io/: __init__.py  normalize.py  params.py
src/biosieve/reduction/: __init__.py  base.py  descriptor_euclidean.py  embedding_cosine.py  exact.py  identity_greedy.py  kmer_jaccard.py  mmseqs2.py  structural_distance.py
src/biosieve/reduction/backends/: embedding_backend.py
src/biosieve/reporting/: __init__.py  writers.py
src/biosieve/splitting/: __init__.py  base.py  cluster.py  distance_aware.py  distance_aware_kfold.py  group.py  group_kfold.py  homology_aware.py  random.py  random_kfold.py  stratified.py  stratified_kfold.py  stratified_numeric.py  stratified_numeric_kfold.py  time_based.py
src/biosieve/utils/: logging.py  seeds.py
src/examples/: biosieve_example_dataset_1000_desc.csv  cluster_map.csv  data_nr_deuc.csv  data_nr_exact.csv  data_nr_identity.csv  data_nr_kmer.csv  data_nr_mmseqs2.csv  data_nr_struct.csv  embedding_ids.csv  embeddings.npy  map_deuc.csv  map_identity.csv  map_kmer.csv  map_mmseqs2.csv  map_struct.csv  preparing_embedding_for_reductions.ipynb  quickstart.sh  reduction_deuc.json  reduction_embcos.json  reduction_exact.json  reduction_identity.json  reduction_kmer.json  reduction_mmseqs2.json  reduction_struct.json  redundancy_map_exact.csv  struct_edges.csv  testing_reducers.sh  testing_splitters.sh
src/examples/results/embcos/: data_nr.csv  map.csv  report.json
src/examples/runs/mmseqs2_clusters/: clusters_all_seqs.fasta  clusters_cluster.tsv  clusters_rep_seq.fasta  input.fasta
src/examples/runs/split_clusteraware/: split_report.json  test.csv  train.csv  val.csv
src/examples/runs/split_distance_desc/: split_report.json  test.csv  train.csv  val.csv
src/examples/runs/split_distance_emb/: split_report.json  test.csv  train.csv  val.csv
src/examples/runs/split_distanceaware_kfold/: kfold_report.json
src/examples/runs/split_group/: split_report.json  test.csv  train.csv  val.csv
src/examples/runs/split_group_kfold/: kfold_report.json
src/examples/runs/split_homology/: split_report.json  test.csv  train.csv  val.csv
src/examples/runs/split_random/: split_report.json  test.csv  train.csv  val.csv
src/examples/runs/split_random_kfold/: kfold_report.json
src/examples/runs/split_stratified/: split_report.json  test.csv  train.csv  val.csv
src/examples/splits_random/: test.csv
src/examples/splits_random_2/: split_assignments.csv  split_report.json  train.csv  val.csv
src/examples/splits_stratified/: split_assignments.csv  split_report.json  test.csv  train.csv  val.csv
tests/: conftest.py  test_registry_smoke.py
tests/cli/: test_cli.py
tests/integration/: test_runner_reduce.py  test_runner_split.py
tests/unit/: test_core.py
tests/unit/reduction/: test_backends.py  test_descriptor_euclidean.py  test_embedding_cosine.py  test_exact.py  test_identity_greedy.py  test_kmer_jaccard.py  test_minhash_jaccard.py  test_mmseqs2.py  test_reduction_invariants.py  test_structural_distance.py
tests/unit/splitting/: test_cluster_aware.py  test_distance_aware.py  test_distance_aware_kfold.py  test_group.py  test_group_kfold.py  test_homology_aware.py  test_random.py  test_random_kfold.py  test_split_invariants.py  test_stratified.py  test_stratified_kfold.py  test_stratified_numeric.py  test_stratified_numeric_kfold.py  test_time.py
(+150 files in other folders)
