[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biosieve"
version = "0.1.0"
description = "Redundancy reduction and leakage-aware dataset partitioning for biological ML."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
   { name = "KrenAI-Lab", email = "krenai@umag.cl" }
]
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pyrefly>=0.60.2",
    "ruff>=0.15.10",
    "taskipy>=1.14.1",
    "ty>=0.0.29",
]

[project.optional-dependencies]
minhash = ["datasketch>=1.9"]
faiss = ["faiss-cpu>=1.13.0"]

[tool.hatch.version]
path = "biosieve/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "/biosieve",
]

[project.scripts]
biosieve = "biosieve.cli.main:main"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["F", "W", "E", "I", "A", "B", "N"]

[tool.taskipy.tasks]
sort-imports = "ruff check --fix --select I biosieve/ tests/"
format = "task sort-imports && ruff format biosieve/ tests/"
lint = "ruff check biosieve/ tests/"
lint-fix = "ruff check --fix biosieve/ tests/"
test = "pytest -q"
test-v = "pytest -v"
test-cov = "pytest --cov=biosieve --cov-report=html"
typecheck = "pyrefly check biosieve/ tests/"
typecheck-ty = "ty check biosieve/ tests/"
