[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biosieve"
dynamic = ["version"]
description = "Redundancy reduction and leakage-aware dataset partitioning for biological ML."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
   { name = "KrenAI-Lab", email = "krenai@umag.cl" }
]
keywords = [
    "bioinformatics",
    "biology",
    "dataset-splitting",
    "deduplication",
    "machine-learning",
    "sequence-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=2.4.4",
    "polars>=1.39.3",
    "polars-ds>=0.11.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.8.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pyrefly>=0.60.2",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.10",
    "taskipy>=1.14.1",
    "ty>=0.0.29",
]

[project.optional-dependencies]
minhash = ["datasketch>=1.9"]
faiss = ["faiss-cpu>=1.13.0"]

[project.urls]
Homepage = "https://github.com/kren-ai-lab/biosieve"
Repository = "https://github.com/kren-ai-lab/biosieve"
Issues = "https://github.com/kren-ai-lab/biosieve/issues"
Documentation = "https://github.com/kren-ai-lab/biosieve#readme"

[tool.hatch.version]
path = "biosieve/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "/biosieve",
]

[project.scripts]
biosieve = "biosieve.cli.main:main"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "N802", "N803", "N806", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLC0415", "PLR2004", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "mmseqs2: requires mmseqs binary in PATH",
    "slow: slow integration tests",
]
addopts = "-q --tb=short"

[tool.taskipy.tasks]
sort-imports = "ruff check --fix --select I,F401 biosieve/ tests/"
format = "task sort-imports && ruff format biosieve/ tests/ examples/"
lint = "ruff check biosieve/ tests/"
lint-fix = "ruff check --fix biosieve/ tests/"
test = "pytest -q"
test-v = "pytest -v"
test-cov = "pytest --cov=biosieve --cov-report=html"
pyrefly = "pyrefly check biosieve/ tests/"
ty = "ty check biosieve/ tests/"
